--- a/CSS/mission_statement.css
+++ b/CSS/mission_statement.css
@@ -1,28 +1,38 @@
 * {
     font-family: 'Times New Roman', Times, serif;
     line-height: 1.5;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 0 auto;
+    padding: 2%;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    max-width: 600px;   
+    border-style: groove;
+    border-color: black black black black;
+    border-width:1px;
+}
 div.content {
-    border-radius: 5%;
-    border-color: black;
-    line-height: normal;
-    max-width: 10px;
+    line-height: 1.5;
+    margin: 10px;
 
 }
 
 .title, .subtitle{
     text-align: center;
+    letter-spacing: 3px;
 
 }
 
 .subtitle {
     color: #006EB6;
-    font-size: small;
     padding-bottom: 0px;
     margin-bottom: 5px;
+    border-style: solid;
+    border-color: white white rgb(201, 201, 201) white;
+    border-width: 1px;
 
 }
 
@@ -35,6 +45,10 @@ div.content {
     font-size: 20px;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+}
 img.logo {
     max-width: 150px;
 
