--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -23,7 +23,7 @@ a:link, a:visited {
     color: var(--text-light);
 }
 
-header {
+#headerMenu {
     background-color: var(--primary-color);
     color: var(--text-light);
     padding: 1em;
@@ -45,7 +45,7 @@ img {
     place-items: center;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1000px) {
     .gallery {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -62,4 +62,10 @@ footer {
     left: 0%;
     right: 0%;
     background-color: var(--primary-color);
+}
+
+@media screen and (max-width: 700px) {
+    .hidden {
+        display: none;
+    }
 }
