--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -45,7 +45,7 @@ img {
     place-items: center;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 800px) {
     .gallery {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -63,7 +63,8 @@ footer {
     right: 0%;
     background-color: var(--primary-color);
 }
-
-.hidden {
-    display: none;
+@media screen and (max-width: 800px) {  
+    .hidden {
+        display: none;
+    }
 }
