--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -29,7 +29,28 @@ a:link, a:visited {
     padding: 1em;
 }
 
-img {
+.viewer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background:  rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 10%;
+}
+.viewer button {
+    position: fixed;
+    font-size: xx-large;
+}
+
+.viewer img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
+
+.gallery img {
     max-width: 100%;
     object-fit: cover;
     height: 250px;
