--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -29,7 +29,7 @@ a:link, a:visited {
     padding: 1em;
 }
 
-.viewer {
+#viewer {
     position: fixed;
     top: 0;
     left: 0;
@@ -39,18 +39,18 @@ a:link, a:visited {
     color: white;
     padding: 10%;
 }
-.viewer button {
+#viewer button {
     position: fixed;
     font-size: xx-large;
 }
 
-.viewer img {
+#viewer img {
     max-width: 100%;
     max-height: 100%;
     margin: auto;
 }
 
-.gallery img {
+#gallery img {
     max-width: 100%;
     object-fit: cover;
     height: 250px;
@@ -60,14 +60,14 @@ a:link, a:visited {
     margin: 1em;
 }
 
-.gallery {
+#gallery {
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
 }
 
 @media screen and (min-width: 800px) {
-    .gallery {
+    #gallery {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         place-items: center;    
@@ -88,4 +88,8 @@ footer {
     .hidden {
         display: none;
     }
+}
+
+.hidden {
+    display: none;
 }
