--- a/creditcard/creditcard.css
+++ b/creditcard/creditcard.css
@@ -2,6 +2,7 @@
 #cardImage {
     height: 500px;
     display: grid;
+    z-index: -1;
 }
 
 #gridContainer {
@@ -16,6 +17,7 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     margin: 10px;
+    z-index: 1;
 }
 
 #cardBack {
