--- a/recipebook/recipebook.css
+++ b/recipebook/recipebook.css
@@ -1,4 +1,12 @@
-
+@import url("https://fonts.googleapis.com/css2?family=family=Amatic+SC&display=swap");
+:root {
+--primary-color: #1B98E0;
+--secondary-color: #59c3c3;
+--text-dark: #333;
+--text-light: #ebebeb;
+--primary-font: Arial, Helvetica,sans-serif;
+--secondary-font: "Amatic SC";
+}
 
 header img{
     max-width: 75px;
@@ -9,16 +17,18 @@ header {
     margin: 0 auto;
     justify-content: center;
     padding-bottom: 15px;
+    font-family: var(--primary-font);
 }
 
 #searchBar {
     display: flex;
     justify-content: center;
+    padding: 10px;
 }
 
 #searchBar input {
     width: 100%;
-    padding: 5px;
+    padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
@@ -33,12 +43,55 @@ footer img {
     max-width: 50px;
 }
 
+#recipePlacer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+#recipes {
+    border: 5px solid var(--text-dark);
+    padding: 20px;
+}
+
+#recipes p {
+    display: flex;
+    color: var(--text-dark);
+    font-family: var(--primary-font);
+    justify-content: right;
+}
+
+#author {
+    font-size: larger;
+}
+
+#recipes a {
+    display: flex;
+    font-family: var(--primary-font);
+    justify-content: right;
+
+}
+#tags, #author, #date {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#image {
+    display: flex;
+    justify-content: left;
+    max-width: 75%;
+}
 
 
-/*
-@media screen and (min-width: 750px) {
+
+
+@media screen and (max-width: 750px) {
     header img {
-        max-width: 100px;
+        max-width: 75px;
     }
 
     header {
@@ -59,6 +112,28 @@ footer img {
         border: 1px solid #ccc;
     }
 
+    #recipePlacer {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    
+    #tags, #author, #date {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    
+    #image {
+        display: flex;
+        justify-content: left;
+        max-width: 30%;
+    }
+    
     footer {
         display: flex;
         margin: 0 auto;
@@ -69,4 +144,63 @@ footer img {
         max-width: 75px;
     }
     
-}*/
+}
+
+
+
+@media screen and (max-width: 900px) and (min-width: 750px){
+    header img {
+        max-width: 75px;
+    }
+
+    header {
+        display: flex;
+        margin: 0 auto;
+        justify-content: center;
+    }
+
+    #searchBar {
+        display: flex;
+        justify-content: center;
+    }
+
+    #searchBar input {
+        width: 100%;
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+    #recipePlacer {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    
+    #tags, #author, #date {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    
+    #image {
+        display: flex;
+        justify-content: left;
+        max-width: 45%;
+    }
+    
+    footer {
+        display: flex;
+        margin: 0 auto;
+        justify-content: center;
+    }
+
+    footer img {
+        max-width: 75px;
+    }
+    
+}
