--- a/personalSite/css/gameBoard.css
+++ b/personalSite/css/gameBoard.css
@@ -14,12 +14,19 @@
     font-family: var(--primary-font);
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--secondary-color);
+}
+
 h1, p {
     display: flex;
     text-align: center;
     justify-content: center;
     padding-bottom: 10px;
-    font-family: var(--primary-font);
 }
 
 h1 {
