--- a/personalSite/css/styling.css
+++ b/personalSite/css/styling.css
@@ -106,6 +106,15 @@ img {
     max-height: 100%;
 }
 
+
+#backToHome {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    background-color: var(--secondary-color);
+    font-size: 1.5em;
+    padding: 5px;
+}
 #dep {
     display: none;
     justify-content: center;
